User Query Management is done

--- a/adminDashboard.html
+++ b/adminDashboard.html
@@ -137,7 +137,7 @@
                 <a href="#" class="text-white d-block py-1" onclick="loadPage('/adminPages/nonResolvedQueries.html')">New Queries</a>
               </li>
               <li>
-                <a href="#" class="text-white d-block py-1" onclick="loadPage('resolved_queries.html')">Resolved
+                <a href="#" class="text-white d-block py-1" onclick="loadPage('/adminPages/resolvedQueries.html')">Resolved
                   Queries</a>
               </li>
             </ul>
