JWT authentication is implemented in Admin side

--- a/register.html
+++ b/register.html
@@ -87,7 +87,7 @@
           <select class="form-select" id="type" required>
             <option value="">-- Select User Type --</option>
             <option value="reader">Book Reader</option>
-            <option value="admin">Admin</option>
+            <option value="Admin">Admin</option>
           </select>
         </div>
 
